[package]
name = "httpie_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
colored = "2"
jsonxf = "1.1"
mime = "0.3"
reqwest = { version = "0.12.1", features = ["json"] }
tokio = { version = "1", features = ["full"] }
